...
    when (variant) {
        AvatarVariant.COMPACT -> {
            val imageSize = 48.dp
            if (avatarUrl.isNullOrBlank()) {
                Icon(
                    imageVector = Icons.Filled.Person,
                    contentDescription = "Default profile picture",
                    modifier =
                        modifier
                            .size(imageSize)
                            .clip(CircleShape)
                            .then(
                                if (onClick != null) Modifier.clickable(onClick = onClick)
...
                            ),
                    tint = MaterialTheme.colorScheme.onPrimary
                )
            } else {
                AsyncImage(
                    model = avatarUrl,
                    contentDescription = "Profile picture",
                    modifier =
                        modifier.size(imageSize).clip(CircleShape).clickableIfNotNull(onClick),
                    contentScale = ContentScale.Crop
                )
            }
        }
...
