...
                    if (!pending) {
                        chatRepository.getChatsOfCurrentUser(relatedPostType)
                    } else {
                        chatRepository.getPendingChatsOfCurrentUser(relatedPostType)
                    }
                } catch (exception: Exception) {
                    Log.e("ChatViewModel", "Error fetching chats", exception)
                    _uiState.update { it.copy(error = "Error fetching chats") }
                    return@launch
                }
            val filteredIsOwnerChats =
                try {
                    chats.filter {
...
